--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,23 @@ img {
   line-height: 1.5;
   display: inline-block;
   padding: 24px 0;
+  position: relative;
 }
 .nav-list .nav-link:hover,
 .nav-list .nav-link:focus {
   color: var(--ocean, #404bbf);
+}
+.nav-link:hover::after,
+.nav-link:focus::after {
+  content: "";
+  width: 67px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: block;
 }
 .address-container {
   font-style: normal;
@@ -73,6 +86,14 @@ img {
 }
 .order-container {
   background-color: var(--navyblue, #2e2f42);
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .order-title {
   color: var(--white, #fff);
@@ -103,6 +124,41 @@ img {
 .border-button:focus {
   background-color: var(--ocean, #404bbf);
 }
+.advantages-item .icon {
+  fill: #2e2f42;
+}
+.icon {
+  box-sizing: content-box;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  padding: 24px 100px;
+}
+.social-media-list {
+  display: flex;
+  gap: 24px;
+  flex-shrink: 0;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+.social-media-list .social-media-link {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+.social-media-link:hover,
+.social-media-link:focus {
+  background-color: #31d0aa;
+}
+
+.icon-social {
+  fill: #f4f4fd;
+}
+
 .advantages-item,
 .team-item,
 .portfolio-item {
@@ -208,7 +264,7 @@ img {
   margin-bottom: 72px;
 }
 .team-item-descr {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 .portfolio-item-descr {
   padding: 32px 16px;
@@ -225,5 +281,45 @@ img {
 }
 .adves-container .logo {
   display: inline-block;
+  margin-bottom: 16px;
+}
+.portfolio-item-pic {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  transform: translatey(100%);
+  transition-property: transform;
+}
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+}
+.overlay p {
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin: 0;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.adves-container .container {
+  display: flex;
+  gap: 120px;
+}
+.social-media-footer .social-media-list {
+  gap: 16px;
+}
+.soc-md-text {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
   margin-bottom: 16px;
 }
