--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ img {
   display: inline-block;
   padding: 24px 0;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list .nav-link:hover,
 .nav-list .nav-link:focus {
@@ -79,6 +80,7 @@ img {
 .address-container .address-link {
   color: var(--slate, #434455);
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-container .address-link:hover,
 .address-container .address-link:focus {
@@ -119,6 +121,7 @@ img {
   display: block;
   border: none;
   margin: 48px auto 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .border-button:hover,
 .border-button:focus {
@@ -149,6 +152,7 @@ img {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-media-link:hover,
 .social-media-link:focus {
@@ -187,6 +191,12 @@ img {
 .team-container {
   background-color: var(--cloud, #f4f4fd);
 }
+.team-item {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.0064),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.0256),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.0064);
+}
+
 .advantages-title,
 .team-title,
 .portfolio-cont-title {
@@ -295,11 +305,20 @@ img {
   height: 100%;
   background-color: #4d5ae5;
   transform: translatey(100%);
-  transition-property: transform;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .overlay {
+.portfolio-item:hover .overlay,
+.portfolio-item:focus .overlay {
   transform: translateY(0);
 }
+.portfolio-item:hover,
+.portfolio-item:focus {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.0064),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.0256),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.0064);
+}
+
 .overlay p {
   color: #f4f4fd;
   padding-top: 40px;
