--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/peopleoffice.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
