--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ img {
   fill: #2e2f42;
 }
 .icon-box {
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   height: 112px;
@@ -196,8 +196,7 @@ img {
 }
 .team-item {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .advantages-title,
@@ -294,7 +293,7 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adves-container {
   padding: 100px 0;
@@ -304,7 +303,7 @@ img {
   margin-bottom: 16px;
 }
 .adves-logo-text {
-  margin-right: 120px 
+  margin-right: 120px;
 }
 
 .portfolio-item-pic {
@@ -325,7 +324,7 @@ img {
   margin: 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  font-size: 16px; 
+  font-size: 16px;
 }
 .portfolio-item:hover .overlay,
 .portfolio-item:focus .overlay {
@@ -334,8 +333,7 @@ img {
 .portfolio-item:hover,
 .portfolio-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-   0px 1px 1px rgba(46, 47, 66, 0.16),
-   0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .adves-container .container {
