--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ img {
   background-size: cover;
   max-width: 1440px;
   background-position: center;
+  margin: 0 auto;
 }
 .order-title {
   color: var(--white, #fff);
