--- a/css/styles.css
+++ b/css/styles.css
@@ -58,10 +58,10 @@ img {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.nav-link:hover::after,
-.nav-link:focus::after {
-  color: var(--ocean, #404bbf);
+.current {
+  color: #404bbf;
+}
+.current::after {
   content: "";
   width: 67px;
   height: 4px;
@@ -71,6 +71,18 @@ img {
   bottom: -1px;
   left: 0;
 }
+.nav-link:hover::after,
+.nav-link:focus::after {
+  color:  #404bbf;
+  content: "";
+  width: 67px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+} 
 .address-container {
   font-style: normal;
 }
