--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-size: 16px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover .overlay,
 .portfolio-item:focus .overlay {
