--- a/css/styles.css
+++ b/css/styles.css
@@ -353,10 +353,11 @@ img {
 .portfolio-item a:focus .overlay {
   transform: translateY(0);
 }
-.portfolio-item a:hover,
-.portfolio-item a:focus {
+.portfolio-item:hover,
+.portfolio-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .adves-container .container {
