--- a/css/styles.css
+++ b/css/styles.css
@@ -349,7 +349,7 @@ img {
   font-size: 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item a:hover .overlay,
+.portfolio-item:hover .overlay,
 .portfolio-item a:focus .overlay {
   transform: translateY(0);
 }
