--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ img {
 }
 .portfolio-item:hover .overlay,
 .portfolio-item a:focus .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 .portfolio-item:hover,
 .portfolio-item:focus {
