--- a/css/styles.css
+++ b/css/styles.css
@@ -349,12 +349,12 @@ img {
   font-size: 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .overlay,
+.portfolio-item a:hover .overlay,
 .portfolio-item a:focus .overlay {
   transform: translateY(0%);
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-item a:hover,
+.portfolio-item a:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
