--- a/css/styles.css
+++ b/css/styles.css
@@ -332,7 +332,7 @@ img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-item-pic .overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -349,6 +349,11 @@ img {
   font-size: 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.portfolio-item a {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+}
+
 .portfolio-item a:hover .overlay,
 .portfolio-item a:focus .overlay {
   transform: translateY(0%);
