--- a/css/styles.css
+++ b/css/styles.css
@@ -349,20 +349,18 @@ img {
   font-size: 16px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item a {
+.portfolio-item {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item a:hover .overlay,
-.portfolio-item a:focus .overlay {
+.portfolio-item:hover .overlay {
   transform: translateY(0%);
 }
-.portfolio-item a:hover,
-.portfolio-item a:focus {
+.portfolio-item:hover,
+.portfolio-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .adves-container .container {
